Fix footer text colors in light and dark modes

--- a/assets/css/home9-style.css
+++ b/assets/css/home9-style.css
@@ -628,6 +628,12 @@ h6 {
 .sub-color {
   color: #8e8e8e; }
 
+.footer-sa h4 .sub-color {
+  color: #ffffff; }
+
+.footer-sa h4 {
+  color: #8e8e8e; }
+
 .sub-head {
   font-size: 20px;
   line-height: 28px; }
